# MAXINE-VFX-SDK

./: CHANGELOG  CMakeLists.txt  LICENSE  README.MD  README.md  version.h
nvvfx/: NVOSSLicense.txt
nvvfx/include/: nvCVStatus.h  nvVideoEffects.h
nvvfx/src/: NVVideoEffectsProxy.cpp
samples/: CMakeLists.txt  NVOSSLicense.txt
samples/AigsEffectApp/: AigsEffectApp.cpp  CMakeLists.txt  run.bat
samples/BatchEffectApp/: BatchAigsEffectApp.cpp  BatchDenoiseEffectApp.cpp  BatchEffectApp.cpp  BatchUtilities.cpp  BatchUtilities.h  CMakeLists.txt  run.bat
samples/DenoiseEffectApp/: CMakeLists.txt  DenoiseEffectApp.cpp  run.bat
samples/UpscalePipelineApp/: CMakeLists.txt  UpscalePipeline.cpp  run.bat  run.sh  run_util.sh
samples/VideoEffectsApp/: CMakeLists.txt  VideoEffectsApp.cpp  run.bat
