# Sample apps
add_subdirectory(external)
add_subdirectory(UpscalePipelineApp)  # Artifact Reduction and Upscale  
add_subdirectory(VideoEffectsApp)     # Artifact Reduction and Super Res   
add_subdirectory(AigsEffectApp)       # Green Screen 
add_subdirectory(BatchEffectApp)
add_subdirectory(DenoiseEffectApp)
